Bug 143447 - Some Chinese IME will make cursor disappear
Summary: Some Chinese IME will make cursor disappear
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
7.1.4.2 release
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.4.0 target:7.3.4
Keywords:
: 146890 (view as bug list)
Depends on:
Blocks: CJK-Chinese-Traditional CJK-Chinese-Simplified
  Show dependency treegraph
 
Reported: 2021-07-20 06:05 UTC by Po-Yen Huang
Modified: 2022-05-13 13:14 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
word roots test case for this bug (160.72 KB, video/webm)
2021-07-20 06:07 UTC, Po-Yen Huang
Details
related words test case for this bug (646.45 KB, video/webm)
2021-07-20 06:08 UTC, Po-Yen Huang
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Po-Yen Huang 2021-07-20 06:05:11 UTC
Description:
Some Chinese IME will make cursor disappear on Writer/Calc/Impress. When input some word roots, it will enter pre-edit mode, then press Spacebar and then ESC, cursor will disappear. But if you press "Save", it will show again. Please check attachments.

I tested Cangjie input method(倉頡) on Windows 10 21H1, so it should be latest version, and it won't happen if switch IME to legacy version. These tests are on a fresh install, so I don't reset UserProfile.

Some other users report that it will also happen on Chewing input method(注音) and Boshiamy input method(嘸蝦米).

Steps to Reproduce:
1. Open Writer/Calc/Impress
2. Switch IME to Changjie/Chewing/Boshiamy input method
3. Input some word roots, then press Spacebar, it will show some candidate words
4. Press ESC

Actual Results:
cursor will disappear

Expected Results:
cursor shows in correct position


Reproducible: Always


User Profile Reset: No



Additional Info:
If you enter a full word like 你 when showing related words enabled, it will show some related words, press ESC, and cursor will also disappear.
Comment 1 Po-Yen Huang 2021-07-20 06:07:18 UTC
Created attachment 173695 [details]
word roots test case for this bug
Comment 2 Po-Yen Huang 2021-07-20 06:08:26 UTC
Created attachment 173696 [details]
related words test case for this bug
Comment 3 yellowplane 2021-08-09 13:45:24 UTC
Hi Po-Yen Huang,

Thanks for reporting the bug. I can reproduce in

Version: 7.3.0.0.alpha0+ (x86) / LibreOffice Community
Build ID: ad1b12686da88bea57582df10fa85268ada209b8
CPU threads: 8; OS: Windows 10.0 Build 19042; UI render: Skia/Vulkan; VCL: win
Locale: en-GB (en_US); UI: en-US
Calc: threaded

For input method, I went to my language settings on Windows 10, installed the  Chinese (Traditional, Taiwan) language pack, and changed my keyboard to "Microsoft ChangJie".

In Writer, after I press ESC, the cursor completely disappears and I am unable to bring it back regardless of where I click on the document or program. My cursor is stuck on the "I" symbol and I am unable to click anywhere to type. I had to exit the application to resume typing capabilities.

In Calc, after I press ESC and click on another cell, the cursor animation itself appears but when I start typing some word roots, I am unable to see these word roots on the screen. Essentially, I unable to see what I type.

In Impress, similar to Calc, after I press ESC and click on another text box, the cursor animation itself appears but once I start typing some word roots, I am unable to see these word roots on the screen.
Comment 4 Dieter 2022-02-05 11:24:32 UTC
Probably same problem with Chinese Input Method Editor (IME), see bug 146890. Perhaps somebody can could test and confirm.
Comment 5 Dieter 2022-02-15 21:54:56 UTC
*** Bug 146890 has been marked as a duplicate of this bug. ***
Comment 6 Commit Notification 2022-04-08 13:24:52 UTC
Mark Hung committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2b2d1c08c94fdc3982971c2b19ea241f05e578c9

tdf#143447 ignore IME candidate window state.

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2022-04-13 14:57:20 UTC
Mark Hung committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/c3189d9527ee6e5923bfc897428b1b1ade803a47

tdf#143447 ignore IME candidate window state.

It will be available in 7.3.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.